# clean_cmake

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
apps/: Makefile  cmake_install.cmake
